Webpage/projects/photography/stylephotography.css
img {
	margin-bottom: 20px;
	cursor: pointer;
	transition: transform 0.3s ease;
	background-color: #000;
	background-image: url('../../inc/img/loading.gif');
	background-size: 30px 30px;
	background-position: center;
	background-repeat: no-repeat;
}

.modal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 999;
}

.modal img {
	max-width: 90%;
	max-height: 90%;
	object-fit: contain;
}

.modal.active {
	display: flex;
}

.modal-open {
	overflow: hidden;
}

body {
	font-family: sans-serif;
	margin: 0;
	overflow-x: hidden;
}

h1 {
	text-align: center;
	margin-top: 50px;
}

#einleittext {
	color: #fff;
	font-family: monospace;
}

h4 {
	text-align: center;
	line-height: 80px;
	font-weight: normal;
}

.ImgDescription {
	color: #fff;
	display: block;
	font-family: monospace;
	margin-bottom: 10px;
}

#gallery {
	-webkit-column-count: 4;
	-moz-column-count: 4;
	column-count: 4;
	-webkit-column-gap: 1em;
	-moz-column-gap: 1em;
	column-gap: 1em;
	padding: 0;
	-moz-column-gap: 1.5em;
	-webkit-column-gap: 1.5em;
	font-size: .85em;
	width: 90vw;
	margin-left: 5vw;
	margin-right: 5vw;
}

.item img {
	max-width: 100%;
}

#footer {
	margin-top: 3vh;
}

@media only screen and (max-width: 320px) {
	.gallery {
		-moz-column-count: 1;
		-webkit-column-count: 1;
		column-count: 1;
	}
}

@media only screen and (min-width: 321px) and (max-width: 768px) {
	.gallery {
		-moz-column-count: 2;
		-webkit-column-count: 2;
		column-count: 2;
	}
}

@media only screen and (min-width: 769px) and (max-width: 1200px) {
	.gallery {
		-moz-column-count: 3;
		-webkit-column-count: 3;
		column-count: 3;
	}
}

@media only screen and (min-width: 1201px) {
	.gallery {
		-moz-column-count: 4;
		-webkit-column-count: 4;
		column-count: 4;
	}
}

